getting closer, route and forms

--- a/src/assets/scss/_text.scss
+++ b/src/assets/scss/_text.scss
@@ -1,5 +1,5 @@
 body, input {
-  font-family: monospace;
+  font-family: "Roboto", sans-serif;
   font-size: 1.00rem;
   line-height: 2.00rem;
   letter-spacing: 0.02rem;
