--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -67,7 +67,7 @@ table {
 }
 
 body, input {
-  font-family: monospace;
+  font-family: "Roboto", sans-serif;
   font-size: 1rem;
   line-height: 2rem;
   letter-spacing: 0.02rem;
@@ -90,6 +90,74 @@ code {
   font-family: monospace;
   padding: 0 0.2rem;
   background-color: #e3e3e3;
+}
+
+.contacts {
+  margin: 2rem 0;
+  display: grid;
+  gap: 1rem;
+}
+
+.sort-firstName, .sort-lastName {
+  border-radius: 0.25rem;
+  border: 1px solid #e3e3e3;
+  background-color: white;
+  color: #969696;
+  transition: border ease-out 0.3s;
+}
+.sort-firstName:hover, .sort-firstName:focus, .sort-lastName:hover, .sort-lastName:focus {
+  transition: border 0.1s;
+  color: inherit;
+}
+.sort-firstName:hover.edit:hover, .sort-firstName:hover.edit:focus, .sort-firstName:focus.edit:hover, .sort-firstName:focus.edit:focus, .sort-lastName:hover.edit:hover, .sort-lastName:hover.edit:focus, .sort-lastName:focus.edit:hover, .sort-lastName:focus.edit:focus {
+  border-color: green;
+  color: green;
+}
+.sort-firstName:hover.delete:hover, .sort-firstName:hover.delete:focus, .sort-firstName:focus.delete:hover, .sort-firstName:focus.delete:focus, .sort-lastName:hover.delete:hover, .sort-lastName:hover.delete:focus, .sort-lastName:focus.delete:hover, .sort-lastName:focus.delete:focus {
+  border-color: red;
+  color: red;
+}
+
+.contact {
+  border: 1px solid #e3e3e3;
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+.contact .name {
+  display: flex;
+  align-items: center;
+}
+.contact .buttons {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.contact .buttons i {
+  font-size: 1.5rem;
+}
+.contact .buttons .edit, .contact .buttons .delete {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 0.25rem;
+  border: 1px solid #e3e3e3;
+  background-color: white;
+  color: #969696;
+  transition: border ease-out 0.3s;
+}
+.contact .buttons .edit:hover, .contact .buttons .edit:focus, .contact .buttons .delete:hover, .contact .buttons .delete:focus {
+  transition: border 0.1s;
+  color: inherit;
+}
+.contact .buttons .edit:hover.edit:hover, .contact .buttons .edit:hover.edit:focus, .contact .buttons .edit:focus.edit:hover, .contact .buttons .edit:focus.edit:focus, .contact .buttons .delete:hover.edit:hover, .contact .buttons .delete:hover.edit:focus, .contact .buttons .delete:focus.edit:hover, .contact .buttons .delete:focus.edit:focus {
+  border-color: blue;
+  background-color: blue;
+  color: white;
+}
+.contact .buttons .edit:hover.delete:hover, .contact .buttons .edit:hover.delete:focus, .contact .buttons .edit:focus.delete:hover, .contact .buttons .edit:focus.delete:focus, .contact .buttons .delete:hover.delete:hover, .contact .buttons .delete:hover.delete:focus, .contact .buttons .delete:focus.delete:hover, .contact .buttons .delete:focus.delete:focus {
+  border-color: red;
+  background-color: red;
+  color: white;
 }
 
 /*# sourceMappingURL=main.css.map */
