--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,6 +11,23 @@ body, html {
   text-align: center;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
+footer {
+  padding-top: 1rem;
+  border-top: 1px solid lighten($color-grey, 30%);
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
 header, main, footer {
   margin: 1.00rem 0;
 }
@@ -39,10 +56,28 @@ code {
   }
 }
 
-#form-contact-search {
-  display: flex;
-  justify-content: center;
-  gap: 0.250rem;
+input {
+  border: 1px solid lighten($color-grey, 30%);
+  padding: 0.25rem 0.5rem;
+  min-width: 15rem;
+}
+
+select, button {
+  max-width: 15rem;
+}
+
+button, select {
+  padding: 0.5rem 0.5rem;
+  color: darken($color-grey, 15%) !important;
+
+  @include button-style {
+    color: inherit;
+
+    &:hover, &:focus {
+      border-color: $color-blue;
+      color: white;
+    }
+  }
 }
 
 .contacts {
@@ -74,7 +109,7 @@ code {
     }
     
     .edit, .delete {
-      width: 2.5rem;
+      width: 2.5rem !important;
       height: 2.5rem;
 
       @include button-style {
@@ -100,4 +135,11 @@ code {
       }
     }
   }
+}
+
+#new-contact, #edit-contact {
+  margin-top: 2.00rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.00rem;
 }
